PCS BAckup 26Dec2023/Backup-Source/objects/Compliance_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Vision_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Compliance Summary</relationshipLabel>
        <relationshipName>Compliance_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Unique_Identifier__c</fullName>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_Segment__c</fullName>
        <label>Product Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Compliance Summary</label>
    <nameField>
        <displayFormat>Com-{0000}</displayFormat>
        <label>Compliance Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>